--- a/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.scss
+++ b/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.scss
@@ -7,7 +7,7 @@ ril-progress-spinner {
 	align-items: center;
 
 	.mat-progress-spinner {
-		stroke: main-palette(800);
+		stroke: var(--800);
 	}
 
 	.mat-progress-spinner circle,
