--- a/projects/rilke-ui/src/lib/components/alert/alert.component.scss
+++ b/projects/rilke-ui/src/lib/components/alert/alert.component.scss
@@ -10,17 +10,17 @@ ril-alert {
 		min-height: 48px;
 
 		p {
-			color: main-contrast(800);
+			color: var(--c-800);
 			font-size: 1rem;
 			line-height: 1.6rem;
 			margin-right: 0.6rem;
 		}
 
 		&.default {
-			background: main-palette(900);
+			background: var(--900);
 
 			button {
-				background-color: main-palette(700);
+				background-color: var(--700);
 			}
 		}
 
