--- a/projects/rilke-ui/src/lib/components/button/button.component.scss
+++ b/projects/rilke-ui/src/lib/components/button/button.component.scss
@@ -13,7 +13,7 @@
 	vertical-align: middle;
 	white-space: nowrap;
 	appearance: none;
-	color: main-contrast(800);
+	color: var(--c-800);
 
 	&:hover {
 		border-color: transparent;
@@ -54,7 +54,7 @@
 		border-top: 2px solid rgba(255, 255, 255, 20%);
 		border-right: 2px solid rgba(255, 255, 255, 20%);
 		border-bottom: 2px solid rgba(255, 255, 255, 20%);
-		border-left: 2px solid #FFF;
+		border-left: 2px solid #fff;
 		transform: translateZ(0);
 		transform: translateZ(0);
 		transform: translateZ(0);
@@ -264,31 +264,31 @@
 	}
 
 	&.btn-light {
-		background: main-contrast(900);
-		color: main-palette(900);
+		background: var(--c-900);
+		color: var(--900);
 
 		&.btn-outline {
 			background: transparent !important;
-			border-color: main-contrast(900);
-			color: main-contrast(900);
+			border-color: var(--c-900);
+			color: var(--c-900);
 
 			.btn-loader {
-				border-left: 2px solid main-contrast(900);
+				border-left: 2px solid var(--c-900);
 			}
 		}
 	}
 
 	&.btn-dark {
-		background: main-palette(900);
-		color: main-contrast(900);
+		background: var(--900);
+		color: var(--c-900);
 
 		&.btn-outline {
 			background: transparent !important;
-			border-color: main-palette(900);
-			color: main-palette(900);
+			border-color: var(--900);
+			color: var(--900);
 
 			.btn-loader {
-				border-left: 2px solid main-palette(900);
+				border-left: 2px solid var(--900);
 			}
 		}
 	}
