--- a/projects/rilke-ui/src/lib/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/rilke-ui/src/lib/components/expansion-panel/expansion-panel.component.scss
@@ -1,11 +1,11 @@
 ril-expansion-panel {
 	.mat-expansion-panel {
-		background: main-palette(800);
+		background: var(--800);
 		box-shadow: $s-md;
 		border-radius: $r-md;
 
 		.mat-expansion-indicator::after {
-			color: main-contrast(700) !important;
+			color: var(--c-700) !important;
 		}
 	}
 }
