--- a/projects/rilke-ui/src/lib/components/pagination/pagination.component.scss
+++ b/projects/rilke-ui/src/lib/components/pagination/pagination.component.scss
@@ -10,17 +10,17 @@ ril-pagination {
 			margin: 0;
 
 			.page-link {
-				background: main-palette(700);
-				border-color: main-palette(700);
+				background: var(--700);
+				border-color: var(--700);
 				border-left: 1px solid #353535;
-				color: main-contrast(500);
+				color: var(--c-500);
 				padding: 0.8rem 1.6rem;
 				cursor: pointer;
 
 				&:hover {
-					background: main-palette(500);
-					border-color: main-palette(500);
-					color: main-contrast(500);
+					background: var(--500);
+					border-color: var(--500);
+					color: var(--c-500);
 				}
 			}
 
@@ -42,9 +42,9 @@ ril-pagination {
 
 		.page-item.active {
 			.page-link {
-				background: main-palette(500);
+				background: var(--500);
 				border-color: transparent;
-				color: main-contrast(500);
+				color: var(--c-500);
 			}
 		}
 
