--- a/projects/rilke-ui/src/lib/components/rich-text/rich-text.component.scss
+++ b/projects/rilke-ui/src/lib/components/rich-text/rich-text.component.scss
@@ -1,6 +1,6 @@
 ril-rich-text {
 	border-radius: 0 0 $r-md $r-md;
-	color: main-contrast(800);
+	color: var(--c-800);
 	display: block;
 	font-size: $f-size-md;
 	line-height: 1.3;
@@ -8,18 +8,18 @@ ril-rich-text {
 
 	.ril-richtext-wrap {
 		border-radius: 0 0 $r-md $r-md;
-		color: main-contrast(800);
+		color: var(--c-800);
 		display: block;
 		font-size: $f-size-md;
 		line-height: 1.3;
 		width: 100%;
 
 		.richtext-control {
-			background: main-palette(800);
-			border: 1px solid main-palette(800);
+			background: var(--800);
+			border: 1px solid var(--800);
+			box-shadow: $s-sm;
 			border-top: none;
 			border-radius: inherit;
-			box-shadow: none;
 			color: inherit;
 			cursor: inherit;
 			display: block;
@@ -37,18 +37,18 @@ ril-rich-text {
 			}
 
 			// @include placeholder {
-			// 	color: main-palette(500);
+			// 	color: var(--500);
 			// }
 
 			&:hover {
-				background: main-palette(700);
-				border-color: main-palette(700);
+				background: var(--700);
+				border-color: var(--700);
 				box-shadow: $s-md;
 			}
 		}
 
 		.char-limiter {
-			color: main-palette(500);
+			color: var(--500);
 			display: flex;
 			font-size: 0.9em;
 			justify-content: flex-end;
@@ -63,23 +63,23 @@ ril-rich-text {
 	}
 
 	&.richtext-focus {
-		color: main-contrast(800);
+		color: var(--c-800);
 
 		.ril-richtext-wrap {
 			.richtext-control {
-				background: main-palette(700);
-				border-color: main-contrast(200);
+				background: var(--700);
+				border-color: var(--c-200);
 				box-shadow: $s-md;
 			}
 		}
 
 		ril-editor-toolbar {
-			background-color: main-palette(600);
-			border-color: main-contrast(200);
+			background-color: var(--600);
+			border-color: var(--c-200);
 
 			.toolbar {
 				.set {
-					background-color: main-palette(600);
+					background-color: var(--600);
 				}
 			}
 		}
@@ -96,14 +96,14 @@ ril-rich-text {
 
 	&.richtext-disabled,
 	&.richtext-readonly {
-		color: main-contrast(700);
+		color: var(--c-700);
 
 		.ril-richtext-wrap {
 			cursor: not-allowed;
 
 			.richtext-control {
-				background-color: main-palette(500);
-				border-color: main-palette(500);
+				background-color: var(--500);
+				border-color: var(--500);
 				pointer-events: none;
 				box-shadow: none;
 			}
