--- a/projects/rilke-ui/src/lib/components/tabs/tabs.component.scss
+++ b/projects/rilke-ui/src/lib/components/tabs/tabs.component.scss
@@ -13,14 +13,14 @@ ril-tabs {
 
 	.button-group {
 		position: relative;
-		background: main-palette(800);
+		background: var(--800);
 		border-radius: 0.5rem;
 		text-align: center;
 		cursor: pointer;
 		width: 100%;
 		height: 2.8rem;
 		display: flex;
-		color: main-contrast(500);
+		color: var(--c-500);
 
 		.active {
 			color: $success-color;
@@ -41,7 +41,7 @@ ril-tabs {
 
 			.box {
 				height: 100%;
-				background-color: main-palette(900);
+				background-color: var(--900);
 				border-radius: $r-sm;
 			}
 		}
